// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Full Height Media" Hero Banner correctly 1`] = `
.c8 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c8 {
  color: #000000;
}

.c8 span {
  font-size: inherit;
  line-height: inherit;
}

.c9 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c9 {
  color: #000000;
}

.c9 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #86E4E9;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
}

.c5 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: -2rem 1rem 2rem;
}

.c7 {
  width: 100%;
  z-index: 1;
  border-radius: 1rem;
  padding: 1.5rem;
  color: #000000;
  background-color: #FFFFFF;
}

.c6 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:740px) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width:1024px) {
  .c8 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width:740px) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 0rem 2rem 2rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 100%;
    max-width: 1500px;
    border-radius: 1rem;
    overflow: hidden;
    height: 75vh;
    min-height: 600px;
    max-height: 750px;
  }
}

@media (min-width:1024px) {
  .c2 {
    position: absolute;
    top: 0;
    left: 0;
  }

  .c2 img {
    object-position: top center;
    height: 100%;
    -webkit-transform: scale(1.02);
    -ms-transform: scale(1.02);
    transform: scale(1.02);
    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    -webkit-transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  }

  .c2:has(+ div a:hover) > div > img {
    -webkit-transform: scale(1.04);
    -ms-transform: scale(1.04);
    transform: scale(1.04);
  }
}

@media (min-width:740px) {
  .c5 {
    width: calc(100% - 4rem);
  }
}

@media (min-width:1024px) {
  .c5 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    max-width: 1200px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 0 auto;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    height: 75vh;
    min-height: 600px;
    max-height: 750px;
  }
}

@media (min-width:1024px) {
  .c7 {
    padding: 2rem 2rem 1.75rem;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 92%;
  }
}

@media (min-width:1024px) {
  .c6 {
    height: auto;
    width: 50%;
    margin: 2rem 0;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt="Image alt text"
          className="c4 lazyload"
          data-lowsrc="../PromoLW2.jpg"
          data-sizes="auto"
          data-src="../PromoLW2.jpg"
          data-srcset="../PromoLW2.jpg"
          height="100%"
          src="../PromoLW2.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <h1
            className="c8"
          >
            Curabitur pretium tincidunt lacus
          </h1>
          <p
            className="c9"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders "Half Height Media" Hero Banner correctly 1`] = `
.c8 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c8 {
  color: #000000;
}

.c8 span {
  font-size: inherit;
  line-height: inherit;
}

.c9 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c9 {
  color: #000000;
}

.c9 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #86E4E9;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
}

.c5 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: -2rem 1rem 2rem;
}

.c7 {
  width: 100%;
  z-index: 1;
  border-radius: 1rem;
  padding: 1.5rem;
  color: #000000;
  background-color: #FFFFFF;
}

.c6 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:740px) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width:1024px) {
  .c8 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width:740px) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 0rem 2rem 2rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 100%;
    max-width: 1500px;
    border-radius: 1rem;
    overflow: hidden;
    height: auto;
    min-height: 450px;
  }
}

@media (min-width:1024px) {
  .c2 {
    position: absolute;
    top: 0;
    left: 0;
  }

  .c2 img {
    object-position: top center;
    height: 100%;
    -webkit-transform: scale(1.02);
    -ms-transform: scale(1.02);
    transform: scale(1.02);
    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    -webkit-transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    min-height: 450px;
  }

  .c2:has(+ div a:hover) > div > img {
    -webkit-transform: scale(1.04);
    -ms-transform: scale(1.04);
    transform: scale(1.04);
  }
}

@media (min-width:740px) {
  .c5 {
    width: calc(100% - 4rem);
  }
}

@media (min-width:1024px) {
  .c5 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    max-width: 1200px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 0 auto;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    height: auto;
    min-height: 450px;
  }
}

@media (min-width:1024px) {
  .c7 {
    padding: 2rem 2rem 1.75rem;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 92%;
  }
}

@media (min-width:1024px) {
  .c6 {
    height: auto;
    width: 50%;
    margin: 2rem 0;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt="Image alt text"
          className="c4 lazyload"
          data-lowsrc="../PromoLW2.jpg"
          data-sizes="auto"
          data-src="../PromoLW2.jpg"
          data-srcset="../PromoLW2.jpg"
          height="100%"
          src="../PromoLW2.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <h1
            className="c8"
          >
            Curabitur pretium tincidunt lacus
          </h1>
          <p
            className="c9"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders "Text Banner" Hero Banner correctly 1`] = `
.c5 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c5 {
  color: #000000;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #86E4E9;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: 2rem 1rem;
}

.c4 {
  width: 100%;
  z-index: 1;
  border-radius: 1rem;
  padding: 3rem 1.5rem;
  color: #000000;
  background-color: #2C0230;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:740px) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width:740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 0rem 2rem 2rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 100%;
    max-width: 1500px;
    border-radius: 1rem;
    overflow: hidden;
  }
}

@media (min-width:740px) {
  .c2 {
    width: calc(100% - 4rem);
  }
}

@media (min-width:1024px) {
  .c2 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 0 auto;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:740px) {
  .c4 {
    padding: 4rem 11%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c3 {
    height: auto;
    width: 100%;
    margin: 0;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <h1
            className="c5"
          >
            Curabitur pretium tincidunt lacus
          </h1>
          <p
            className="c6"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
